// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SiteHeader should render correctly 1`] = `
<SiteHeader>
  <Row
    className="header"
    justify="space-between"
  >
    <Flex
      className="header"
      flow="row"
      justify="space-between"
    >
      <div
        className="flex row space-between header"
      >
        <Row>
          <Flex
            flow="row"
          >
            <div
              className="flex row undefined"
            >
              <p>
                Children
              </p>
            </div>
          </Flex>
        </Row>
      </div>
    </Flex>
  </Row>
</SiteHeader>
`;

exports[`SiteHeader should render dark correctly 1`] = `
<SiteHeader
  dark={true}
>
  <Row
    className="header"
    justify="space-between"
  >
    <Flex
      className="header"
      flow="row"
      justify="space-between"
    >
      <div
        className="flex row space-between header"
      >
        <Row>
          <Flex
            flow="row"
          >
            <div
              className="flex row undefined"
            >
              <p>
                Children
              </p>
            </div>
          </Flex>
        </Row>
      </div>
    </Flex>
  </Row>
</SiteHeader>
`;
